Bug 696301 - gserrors.h is missing from installation
Summary: gserrors.h is missing from installation
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Build Process (show other bugs)
Version: master
Hardware: PC Linux
: P4 normal
Assignee: Chris Liddell (chrisl)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-23 02:01 UTC by Justin
Modified: 2015-10-23 02:42 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin 2015-10-23 02:01:59 UTC
Following commit makes it necessary to have gserrors.h installed on the final system.

http://git.ghostscript.com/?p=ghostpdl.git;a=commit;f=psi/ierrors.h;h=640801c0fd5527c7f183549df4fd2da365e427d4

This is currently not the case and leads to

https://bugs.gentoo.org/show_bug.cgi?id=563540
Comment 1 Chris Liddell (chrisl) 2015-10-23 02:42:36 UTC
Sorry, oversight on my part.

Fixed in:

http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=feafe5e5