Bug 696301: add gserrors.h to the installed files

for the so-install target.

Also remove a spurious (copy'n'paste error) comment.

No cluster differences